--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@
 .pub/
 /build/
 /android/app/src/main/AndroidManifest.xml
+/android/app/google-services.json
 
 # Web related
 lib/generated_plugin_registrant.dart
