--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   location:
   firebase_auth:
   firebase_core:
+  cloud_firestore:
 
 
   # The following adds the Cupertino Icons font to your application.
