--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_auth:
   firebase_core:
   cloud_firestore:
+  flutter_bluetooth_serial:
 
 
   # The following adds the Cupertino Icons font to your application.
