--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core:
   cloud_firestore:
   flutter_bluetooth_serial:
+  flutter_background:
 
 
   # The following adds the Cupertino Icons font to your application.
