--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cloud_firestore:
   flutter_bluetooth_serial:
   flutter_background:
+  flutter_background_service:
 
 
   # The following adds the Cupertino Icons font to your application.
