--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_bluetooth_serial:
   flutter_background:
   geocode:
+  dropdown_button2:
 
 
   # The following adds the Cupertino Icons font to your application.
