--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_background:
   geocode:
   dropdown_button2:
+  fluttertoast: 
 
 
   # The following adds the Cupertino Icons font to your application.
