--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   fluttertoast:
   provider:
   geocoding:
+  telephony:
+  background_location:
 
 
   # The following adds the Cupertino Icons font to your application.
