Added emailjs support to send mails in emergency

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   geocoding:
   telephony:
   background_location:
+  http:
 
 
   # The following adds the Cupertino Icons font to your application.
