--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@
 /android/app/google-services.json
 # Web related
 lib/generated_plugin_registrant.dart
+lib/constants/secret_keys.dart
 
 # Symbolication related
 app.*.symbols
